# papermario-pc-upload

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Info.plist  PORT_SKIPS.md  README.md  config.yml  properties.h.in
cmake/: lus-cvars.cmake  papership-cvars.cmake
include/: A2B70.vtx.inc.c  A2BC0.gfx.inc.c  A2C88.gfx.inc.c  anim_stubs.h  common.h  common_structs.h  entity.h  evt.h  functions.h  gbi_custom.h  icon_offsets.h  imgfx.h  include_asm.h  include_asset.h  inspect_icon.gfx.inc.c  inspect_icon.png.h  ispy_icon.gfx.inc.c  ispy_icon.png.h  item_enum.h  ld_addrs.h  macros.h  map.h  message_ids.h  model.h  move_data.inc.c  move_enum.h  npc.h  pulse_stone_icon.gfx.inc.c  pulse_stone_icon.png.h  recipes.inc.c  sparkle_script.h  speech_bubble.gfx.inc.c  speech_bubble.png.h  sprite_shading_profiles.h  types.h  ultra64.h  world_map.inc.c
include/PR/: R4300.h  abi.h  gbi.h  gs2dex.h  gu.h  mbi.h  n_abi.h  os.h  rcp.h  sptask.h  ultratypes.h
include/battle/: actor_types.h
include/charset/: letter_content_1.png.h  peach_letter.png.h  postcard.png.h
include/effects/: effect_defs.h  effect_macros.h  effect_table.c
include/gcc/: memory.h  stdarg.h  stdlib.h  string.h
include/level_up/: big_A.gfx.inc.c  big_BE.gfx.inc.c  big_E.gfx.inc.c  big_L.gfx.inc.c  big_LTSU.gfx.inc.c  big_P.gfx.inc.c  big_PU.gfx.inc.c  big_RE.gfx.inc.c  big_RU.gfx.inc.c  big_U.gfx.inc.c  big_V.gfx.inc.c  big_exclamation_mark.gfx.inc.c  draw_A.vtx.inc.c  draw_BE.vtx.inc.c  draw_E.vtx.inc.c  draw_L.vtx.inc.c  draw_LTSU.vtx.inc.c  draw_P.vtx.inc.c  draw_PU.vtx.inc.c  draw_RE.vtx.inc.c  draw_RU.vtx.inc.c  draw_U.vtx.inc.c  draw_V.vtx.inc.c  draw_exclamation_mark.vtx.inc.c  draw_second_E.vtx.inc.c  draw_second_L.vtx.inc.c
include/libc/: xstdio.h
include/mapfs/: arn_02_hit.h  arn_02_shape.h  arn_03_hit.h  arn_03_shape.h  arn_04_hit.h  arn_04_shape.h  arn_05_hit.h  arn_05_shape.h  arn_07_hit.h  arn_07_shape.h  arn_08_hit.h  arn_08_shape.h  arn_09_hit.h  arn_09_shape.h  arn_10_hit.h  arn_10_shape.h  arn_11_hit.h  arn_11_shape.h  arn_12_hit.h  arn_13_hit.h  arn_13_shape.h  arn_20_hit.h  arn_20_shape.h  arn_bt01_shape.h  arn_bt02_shape.h  arn_bt03_shape.h  arn_bt04_shape.h  arn_bt05_shape.h  arn_bt06_shape.h  dgb_01_hit.h  dgb_01_shape.h  dgb_02_hit.h  dgb_02_shape.h  dgb_03_hit.h  dgb_03_shape.h  dgb_04_hit.h  dgb_04_shape.h  dgb_05_hit.h  dgb_05_shape.h  dgb_06_hit.h  (+836 more)
include/nu/: nualsgi.h
include/pause/: available.png.h  banner_boots.png.h  banner_bp.png.h  banner_fp.png.h  banner_hammer.png.h  banner_hp.png.h  banner_star_energy.png.h  image_1439F0.png.h  image_143BF0.png.h  image_143FF0.png.h  map_arrows.png.h  map_location.png.h  map_path_marker.png.h  orbs.png.h  prompt_check_abilities.png.h  spirits_bg.png.h  stats_bar.png.h  world_map.png.h
include/sprite/: npc_all.h  player.h  sprite_shading_profiles.h
include/starpoint/: __render_digit_0.gfx.inc.c  __render_digit_1.gfx.inc.c  __render_digit_2.gfx.inc.c  __render_digit_3.gfx.inc.c  __render_digit_4.gfx.inc.c  __render_digit_5.gfx.inc.c  __render_digit_6.gfx.inc.c  __render_digit_7.gfx.inc.c  __render_digit_8.gfx.inc.c  __render_digit_9.gfx.inc.c  _render_digit_0.gfx.inc.c  _render_digit_1.gfx.inc.c  _render_digit_2.gfx.inc.c  _render_digit_3.gfx.inc.c  _render_digit_4.gfx.inc.c  _render_digit_5.gfx.inc.c  _render_digit_6.gfx.inc.c  _render_digit_7.gfx.inc.c  _render_digit_8.gfx.inc.c  _render_digit_9.gfx.inc.c  digit_0.vtx.inc.c  digit_1.vtx.inc.c  digit_2.vtx.inc.c  digit_3.vtx.inc.c  digit_4.vtx.inc.c  digit_5.vtx.inc.c  digit_6.vtx.inc.c  digit_7.vtx.inc.c  digit_8.vtx.inc.c  digit_9.vtx.inc.c  load_digit_0.gfx.inc.c  load_digit_1.gfx.inc.c  load_digit_2.gfx.inc.c  load_digit_3.gfx.inc.c  load_digit_4.gfx.inc.c  load_digit_5.gfx.inc.c  load_digit_6.gfx.inc.c  load_digit_7.gfx.inc.c  load_digit_8.gfx.inc.c  load_digit_9.gfx.inc.c  (+20 more)
include/stdlib/: stdarg.h
include/theater/: curtain_vtx.vtx.inc.c  curtains.png.h  floor.png.h  floor_vtx.vtx.inc.c  left_inset_shadow_vtx.vtx.inc.c  left_wall_vtx.vtx.inc.c  right_inset_shadow_vtx.vtx.inc.c  right_wall_vtx.vtx.inc.c  wall_shadows_vtx.vtx.inc.c  walls.png.h
include/ui/: no_controller.png.h
include/vtx/: drawbox1.vtx.inc.c  stencil1.vtx.inc.c  stencil2.vtx.inc.c
libultraship/: Makefile
libultraship/src/: Makefile
port/: Engine.cpp  Engine.h  GBIMiddleware.cpp  Game.cpp  NuSystemShims.cpp  NuSystemShims.h  asset_data_stubs.c  audio_mixer.c  audio_mixer.h  build.c.in  build.h  cvar_prefixes.h  dead_stubs.c  effect_gfx_rom_offsets.txt  effect_gfx_swizzle.c  effect_gfx_tables.h  effect_gfx_textures.c  effect_shim_stubs.c  endian.h  entity_anim_swizzle.c  fx_stubs.c  gu_math.c  ld_addrs_stubs.c  logging.cpp  logging.h  mac_event_helper.mm  misc_stubs.c  os_stubs.c  port_aspect.h  rom_offsets.c  rom_offsets.h  shape_swizzle.c  shape_swizzle.h  ui_texture_loader.c
port/ui/: PaperShipMenu.cpp  PaperShipMenu.h  cvar_prefixes.h
src/: 101b90_len_8f0.c  43F0.c  5B320.c  77480.c  7E9D0.c  8a860_len_3f30.c  animator.c  audio.h  background.c  background_gfx.c  battle_heap_create_obfuscated.c  cam_mode_zone_interp.c  collision.c  create_audio_system_obfuscated.c  draw_box.c  effects.c  encounter.c  encounter_api.c  enemy_ai.c  entity.c  entity_model.c  fio.c  game_modes.c  game_states.c  general_heap_create_obfuscated.c  heap.c  heaps.c  heaps2.c  hud_element.c  hud_element.h  imgfx.c  inventory.c  item_data.inc.c  item_entity.c  load_engine_data_obfuscated.c  load_obfuscation_shims.c  main.c  main_loop.c  model.c  msg.c  (+18 more)
src/audio/: bgm_player.c  core.h  load_banks.c  mseq_player.c  sfx_control.c  sfx_player.c
src/battle/: 16C8E0.c  181810.c  190B20.c  1A5830.c  action_cmd.c  actor_api.c  actor_rendering.c  actor_types.inc.c  battle.c  btl_states_actions.c  btl_states_menus.c  level_up.c  partner_dma.c  standard_events.c  use_items.c  use_moves.c  use_star_powers.c
src/common/: AdvanceBuffer.inc.c  FoliageTransform.inc.c  ItemEntityJumpToPos.inc.c  foliage.inc.c  (+1 more)
tools/: fix_gfx_stubs.py  gen_all_anims.py  gen_effect_gfx_data.py  gen_npc_sprite_headers.py  gen_player_anims.py
(+2798 files in other folders)
